--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 
           <div class="item-content">
             <h1>{{blog.title}}</h1>
-            <p>{{blog.subtitle}}</p>
+            <h3>{{blog.subtitle}}</h3>
 
             <span
               ><a href="{{url_for('blog', uniqueId=blog.uniqueId)}}"
